# linalg

./: Cargo.toml  README.md  TODO
linalg/: lib.rs
linalg-core/: Cargo.toml
linalg-core/src/: lib.rs  matrix.rs
src/: core.rs  discret.rs  lib.rs  lop.rs  lse.rs  marco.rs  matrix.rs  num.rs  prelude.rs  util.rs
src/algebra/: eigen.rs  mod.rs
src/array/: mod.rs
src/codes/: code.rs  linear.rs  mod.rs  permut.rs  source.rs  tests.rs
src/codes/huffman/: bitstream.rs  mod.rs  source.rs
src/core/: mod.rs  tests.rs
src/discret/: mod.rs  tests.rs
src/ea/: mod.rs
src/lop2/: defs.rs  mod.rs  tests.rs
src/matrix/: mod.rs  tests.rs
src/poly/: mod.rs
src/sets/: finite_integer.rs  mod.rs
src/vector/: mod.rs  space.rs
test/: src.rs
