[package]
name = "linalg"
version = "0.1.0"
authors = ["Marc König <marc.koenig@tu-ilmenau.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "linalg"
path = "linalg/lib.rs"

[dependencies]
linalg-core = { path = "linalg-core" }