[package]
authors = ["Marc König <marc.koenig@tu-ilmenau.de>"]
edition = "2018"
name = "linalg"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "linalg"
path = "src/lib.rs"

[dependencies]
num-complex = "0.4"
num-traits = "0.2"
